# shrender

./: CMakeLists.txt  README.MD  convert.py
src/: light.hpp  main.cpp  mesh.hpp  process.hpp  render.hpp  util.hpp
src/sh/: default_image.h  spherical_harmonics.cc
